--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,5 @@
 steps:
 - name: 'docker/compose:1.26.2'
-  args: ['up', '-d']
+  args: ['up', '-f', 'docker-compose.yaml', '-f', 'docker-compose.prod.yaml', '-d']
+  env:
+    'GOOGLE_APIS_KEY=${_GOOGLE_APIS_KEY}'
