--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
 - name: 'docker/compose:1.26.2'
   args: ['up', '-f', 'docker-compose.yaml', '-f', 'docker-compose.prod.yaml', '-d']
   env:
-    'GOOGLE_APIS_KEY=${_GOOGLE_APIS_KEY}'
+    'GOOGLE_APIS_KEY=$_GOOGLE_APIS_KEY'
